--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ form {
     padding: 20px;
 }
 
+input:focus {
+    border: 2px solid blue;
+    box-shadow: 2px 1px 5px grey;
+    outline: none;
+}
+
 h2 {
     text-align: center;
 }
